# dotfiles

./: .gitignore  .gitmodules  README.md
autokey/: vim_keys.ahk  vim_keys.bat
bash/: .bash_profile  .bashrc
mimeapps/.config/: mimeapps.list
nvim/.config/nvim/lua/local_settings/: init.lua  personnal.lua
nvim/.config/nvim/lua/local_settings/repositories/: epitech.lua
ssh-agent/.config/systemd/user/: ssh-agent.service
sway/.config/gammastep/: config.ini
sway/.config/sway/: config
sway/.config/waybar/: config  style.css
tmux/: .tmux.conf
vim/: .vimrc
vim/.vim/: .netrwhist
xmonad/: .xmobarrc
xmonad/.config/alacritty/: alacritty.yml
xmonad/.config/dunst/: dunstrc
xmonad/.config/picom/: picom.conf
xmonad/.config/polybar/: config  config.ini  polybar-start-monitor.sh
xmonad/.config/rofi/: config  config.rasi
xmonad/.xmonad/: default.nix  flake.nix  hie.yaml  shell.nix  xmonad-config.cabal  xmonad.hs
xorg/: .XCompose
