cabal-version:      2.4
name:               xmonad-config
version:            0.1.0.0

author:             Jean-Charles Quillet
maintainer:         jeancharles.quillet@gmail.com

executable xmonad
    main-is:          xmonad.hs
    build-depends:
        containers,
        mtl,
        text,
        xmonad,
        xmonad-contrib,
        X11

    -- LANGUAGE extensions used by modules in this package.
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wpartial-fields
      -Wredundant-constraints
